tests/snapshots/cricket_rs__display__ui__test__odi_first_inngs_draw_ui.snap
---
source: src/display/ui.rs
expression: out

---
┌Matches────────────────────────────────────────────────────────────────────────────────────────────────────────────────────┐
│ BAN vs SL                                                                                                                 │
└───────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────┘
┌Overview───────────────────────────────────────────────────────────────────────────────────────────────────────────────────┐
│BAN 18/1 (4.5) CRR: 3.72                                                                                                   │
│Bangladesh opt to bat                                                                                                      │
│                                                                                                                           │
└───────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────┘
┌Live────────────────────────────────────────────────────────┐┌Key Stats────────────────────────────────────────────────────┐
│Batsman                   R     B     4     6     SR        ││Partnership: 13(20)                                          │
│Tamim Iqbal *             9     13    2     0     69.23     ││Last Wkt: Liton Das  c Dhananjaya de Silva b Chameera 0(3)  -│
│Shakib Al Hasan           7     13    1     0     53.85     ││5/1 in 1.3 ov.                                               │
│                                                            ││Toss: Bangladesh (Batting)                                   │
│Bowler                    O     M     R     W     ECO       ││                                                             │
│Isuru Udana *             2.5   0     12    0     4.2       ││                                                             │
│Dushmantha Chameera       2     0     6     1     3         ││                                                             │
└────────────────────────────────────────────────────────────┘└─────────────────────────────────────────────────────────────┘
┌Scorecard──────────────────────────────────────────────────────────────────────────────────────────────────────────────────┐
│Innings 1                                                                                                                  │
│                                                                                                                           │
│Batsman                                                                                     R   B   4s 6s SR               │
│Tamim Iqbal (c)                batting                                                      9   13  2  0  69.23            │
│Liton Das                      c Dhananjaya de Silva b Chameera                             0   3   0  0  0.00             │
│Shakib Al Hasan                batting                                                      7   13  1  0  53.85            │
│                                                                                                                           │
│Bowler                         O     M   R   W  NB WD ECO                                                                  │
│Isuru Udana                    2.5   0   12  0  0  0  4.20                                                                 │
│Dushmantha Chameera            2     0   6   1  0  1  3.00                                                                 │
│                                                                                                                           │
│                                                                                                                           │
│                                                                                                                           │
│                                                                                                                           │
│                                                                                                                           │
│                                                                                                                           │
└───────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────┘
