tests/snapshots/cricket_rs__display__ui__test__odi_second_inngs_draw_ui.snap
---
source: src/display/ui.rs
expression: out

---
┌Matches────────────────────────────────────────────────────────────────────────────────────────────────────────────────────┐
│ BAN vs SL                                                                                                                 │
└───────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────┘
┌Overview───────────────────────────────────────────────────────────────────────────────────────────────────────────────────┐
│SL 41/1 (7.2) CRR: 5.59                                                                                                    │
│BAN 257/6                                                                                                                  │
│Sri Lanka need 217 runs                                                                                                    │
└───────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────┘
┌Live────────────────────────────────────────────────────────┐┌Key Stats────────────────────────────────────────────────────┐
│Batsman                   R     B     4     6     SR        ││Partnership: 11(14)                                          │
│Pathum Nissanka *         8     11    1     0     72.73     ││Last Wkt: Danushka Gunathilaka   c and b Mehidy Hasan 21(19) │
│Kusal Perera              10    14    0     0     71.43     ││- 30/1 in 4.6 ov.                                            │
│                                                            ││Toss: Bangladesh (Batting)                                   │
│Bowler                    O     M     R     W     ECO       ││                                                             │
│Mustafizur Rahman *       0.2   0     1     0     3         ││                                                             │
│Mehidy Hasan              4     0     11    1     2.8       ││                                                             │
└────────────────────────────────────────────────────────────┘└─────────────────────────────────────────────────────────────┘
┌Scorecard──────────────────────────────────────────────────────────────────────────────────────────────────────────────────┐
│Innings 2                                                                                                                  │
│                                                                                                                           │
│Batsman                                                                                     R   B   4s 6s SR               │
│Danushka Gunathilaka           c and b Mehidy Hasan                                         21  19  5  0  110.53           │
│Kusal Perera (c) (wk)          batting                                                      10  14  0  0  71.43            │
│Pathum Nissanka                batting                                                      8   10  1  0  80.00            │
│                                                                                                                           │
│Bowler                         O     M   R   W  NB WD ECO                                                                  │
│Mehidy Hasan                   4     0   11  1  0  1  2.80                                                                 │
│Taskin Ahmed                   3     0   27  0  0  0  9.00                                                                 │
│Mustafizur Rahman              0.1   0   1   0  0  0  6.00                                                                 │
│                                                                                                                           │
│Innings 1                                                                                                                  │
│                                                                                                                           │
│Batsman                                                                                     R   B   4s 6s SR               │
│Tamim (c)                      lbw b Dhananjaya de Silva                                    52  70  6  1  74.29            │
└───────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────┘
