tests/snapshots/cricket_rs__display__ui__test__test_first_inngs_draw_ui.snap
---
source: src/display/ui.rs
expression: out

---
┌Matches────────────────────────────────────────────────────────────────────────────────────────────────────────────────────┐
│ ENG vs NZ - TEST                                                                                                          │
└───────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────┘
┌Overview───────────────────────────────────────────────────────────────────────────────────────────────────────────────────┐
│NZ 124/3 (40.6) CRR: 3.02                                                                                                  │
│Day 1: 2nd Session                                                                                                         │
│                                                                                                                           │
└───────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────┘
┌Live────────────────────────────────────────────────────────┐┌Key Stats────────────────────────────────────────────────────┐
│Batsman                   R     B     4     6     SR        ││Partnership: 10(19)                                          │
│Henry Nicholls *          5     10    0     0     50        ││Last Wkt: Ross Taylor  lbw b Ollie Robinson 14(38)  - 114/3  │
│Devon Conway              58    109   6     0     53.21     ││in 37.5 ov.                                                  │
│                                                            ││Ovs Left: 49                                                 │
│Bowler                    O     M     R     W     ECO       ││Toss: New Zealand (Batting)                                  │
│Ollie Robinson *          10    3     25    2     2.5       ││                                                             │
│Mark Wood                 8     2     27    0     3.38      ││                                                             │
└────────────────────────────────────────────────────────────┘└─────────────────────────────────────────────────────────────┘
┌Scorecard──────────────────────────────────────────────────────────────────────────────────────────────────────────────────┐
│Innings 1                                                                                                                  │
│                                                                                                                           │
│Batsman                                                                                     R   B   4s 6s SR               │
│Tom Latham                     b Ollie Robinson                                             23  57  2  0  40.35            │
│Devon Conway                   batting                                                      58  109 6  0  53.21            │
│Kane Williamson (c)            b James Anderson                                             13  33  2  0  39.39            │
│Ross Taylor                    lbw b Ollie Robinson                                         14  38  1  0  36.84            │
│Henry Nicholls                 batting                                                      5   10  0  0  50.00            │
│                                                                                                                           │
│Bowler                         O     M   R   W  NB WD ECO                                                                  │
│James Anderson                 11    2   31  1  0  0  2.80                                                                 │
│Stuart Broad                   12    3   31  0  0  0  2.60                                                                 │
│Ollie Robinson                 10    3   25  2  1  0  2.50                                                                 │
│Mark Wood                      8     2   27  0  0  0  3.40                                                                 │
│                                                                                                                           │
│                                                                                                                           │
└───────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────┘
