tests/snapshots/cricket_rs__display__ui__test__test_fourth_inngs_draw_ui.snap
---
source: src/display/ui.rs
expression: out

---
┌Matches────────────────────────────────────────────────────────────────────────────────────────────────────────────────────┐
│ ENG vs NZ - TEST                                                                                                          │
└───────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────┘
┌Overview───────────────────────────────────────────────────────────────────────────────────────────────────────────────────┐
│ENG 56/2 & 275/10                                                                                                          │
│NZ 169/6 & 378/10                                                                                                          │
│Day 5: 2nd Session - England need 217 runs                                                                                 │
└───────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────┘
┌Live────────────────────────────────────────────────────────┐┌Key Stats────────────────────────────────────────────────────┐
│Batsman                   R     B     4     6     SR        ││Partnership: 0(9)                                            │
│Joe Root *                0     3     0     0     0         ││Last Wkt: Zak Crawley  c Nicholls b Southee 2(25)  - 56/2 in │
│Dominic Sibley            19    83    2     0     22.89     ││30.3 ov.                                                     │
│                                                            ││Ovs Left: 43                                                 │
│Bowler                    O     M     R     W     ECO       ││Toss: New Zealand (Batting)                                  │
│Tim Southee *             9     1     21    1     2.33      ││                                                             │
│Neil Wagner               6     4     5     1     0.83      ││                                                             │
└────────────────────────────────────────────────────────────┘└─────────────────────────────────────────────────────────────┘
┌Scorecard──────────────────────────────────────────────────────────────────────────────────────────────────────────────────┐
│Innings 4                                                                                                                  │
│                                                                                                                           │
│Batsman                                                                                     R   B   4s 6s SR               │
│Rory Burns                     c Southee b Wagner                                           25  81  4  0  30.86            │
│Dominic Sibley                 batting                                                      19  83  2  0  22.89            │
│Zak Crawley                    c Henry Nicholls b Southee                                   2   25  0  0  8.00             │
│Joe Root (c)                   batting                                                      0   3   0  0  0.00             │
│                                                                                                                           │
│Bowler                         O     M   R   W  NB WD ECO                                                                  │
│Tim Southee                    9     1   21  1  0  0  2.30                                                                 │
│Kyle Jamieson                  10    6   8   0  0  0  0.80                                                                 │
│Colin de Grandhomme            4     2   5   0  0  0  1.20                                                                 │
│Mitchell Santner               3     0   7   0  0  0  2.30                                                                 │
│Neil Wagner                    6     4   5   1  0  0  0.80                                                                 │
│                                                                                                                           │
│Innings 3                                                                                                                  │
└───────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────┘
