tests/snapshots/cricket_rs__display__ui__test__test_second_inngs_draw_ui.snap
---
source: src/display/ui.rs
expression: out

---
┌Matches────────────────────────────────────────────────────────────────────────────────────────────────────────────────────┐
│ ENG vs NZ - TEST                                                                                                          │
└───────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────┘
┌Overview───────────────────────────────────────────────────────────────────────────────────────────────────────────────────┐
│ENG 142/6 (57.5) CRR: 2.46                                                                                                 │
│NZ 378/10                                                                                                                  │
│Day 4: 1st Session - England trail by 236 runs                                                                             │
└───────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────┘
┌Live────────────────────────────────────────────────────────┐┌Key Stats────────────────────────────────────────────────────┐
│Batsman                   R     B     4     6     SR        ││Partnership: 2(10)                                           │
│Rory Burns *              66    177   9     0     37.29     ││Last Wkt: James Bracey   b Southee 0(6)  - 140/6 in 56.1 ov. │
│Ollie Robinson            2     5     0     0     40        ││Ovs Left: 83.1                                               │
│                                                            ││Toss: New Zealand (Batting)                                  │
│Bowler                    O     M     R     W     ECO       ││                                                             │
│Colin de Grandhomme *     10.5  4     12    0     1.1       ││                                                             │
│Tim Southee               18    8     29    4     1.6       ││                                                             │
└────────────────────────────────────────────────────────────┘└─────────────────────────────────────────────────────────────┘
┌Scorecard──────────────────────────────────────────────────────────────────────────────────────────────────────────────────┐
│Innings 2                                                                                                                  │
│                                                                                                                           │
│Batsman                                                                                     R   B   4s 6s SR               │
│Rory Burns                     batting                                                      66  177 9  0  37.29            │
│Dominic Sibley                 lbw b Jamieson                                               0   7   0  0  0.00             │
│Zak Crawley                    c Watling b Southee                                          2   10  0  0  20.00            │
│Joe Root (c)                   c Ross Taylor b Jamieson                                     42  113 5  0  37.17            │
│Ollie Pope                     lbw b Southee                                                22  32  5  0  68.75            │
│Daniel Lawrence                c de Grandhomme b Southee                                    0   2   0  0  0.00             │
│James Bracey (wk)              b Southee                                                    0   6   0  0  0.00             │
│Ollie Robinson                 batting                                                      2   5   0  0  40.00            │
│                                                                                                                           │
│Bowler                         O     M   R   W  NB WD ECO                                                                  │
│Tim Southee                    18    8   29  4  0  0  1.60                                                                 │
│Kyle Jamieson                  16    6   48  2  1  0  3.00                                                                 │
│Colin de Grandhomme            10.5  4   12  0  0  0  1.10                                                                 │
└───────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────┘
